# zoDIAq

./: .gitignore  Comparing_Jesse_and_Caleb_outputs.ipynb  DI2A_targeted_protein_quantification-Copy1.ipynb  DeterminingLag.ipynb  FDRGraph_graphs_100rep.ipynb  FDRGraph_graphs_libraryVariants.ipynb  GUI.py  GUI_test.py  Graphs_UMAP_Boxplots.ipynb  IdentificationSpectraMatcher.py  LICENSE  PooledSpectraMatch.py  PooledSpectraMatcher.py  QuantSpectraMatcher.py  QuantificationSpectraMatcher.py  README.ipynb  README.md  R_redone.py  SLIM_counting_precursor_window_to_fragment_mz_pairs.py  SLIM_peptide_scan_count_df_creator.py  SLIM_spectral_count_line_graph.py  bug_hunting_mgf_lib.ipynb  comparison_simple.py  condensed31_422to423.csv  condensed31_APIIAVTR-PLAEGTPR.csv  condensed_422to423.csv  condensed_APIIAVTR.csv  condensed_APIIAVTR_PLAEGTPR.csv  condensed_FDPSSVSEWEPHWR.csv  condensed_decoys.csv  cosine_similarity_functions.py  csodiaq.py  csodiaq_base_functions.py  csodiaq_figure_functions.py  csodiaq_gui.py  csodiaq_identification_functions.py  csodiaq_main.py  csodiaq_menu_functions.py  csodiaq_mgf_cleaning_functions.py  csodiaq_quantification_functions.py  (+18 more)
.ipynb_checkpoints/: Comparing_Jesse_and_Caleb_outputs-checkpoint.ipynb  DI2A_targeted_protein_quantification-Copy1-checkpoint.ipynb  FDRGraph_graphs_grantRequest-checkpoint.ipynb  FDRGraph_graphs_libraryVariants-checkpoint.ipynb  Graphs_UMAP_Boxplots-checkpoint.ipynb  Optimal_FDR_Calculations_lib20-checkpoint.ipynb  Optimal_FDR_Calculations_lib31-checkpoint.ipynb
Data/: 2da10ppm_1to16_n1b.txt  MSPLIToutput.csv  (+15 more)
(+307 files in other folders)
