[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CsoDIAq"
version = "2.0.0"
authors = [
  { name="Caleb Cranney", email="caleb.cranney.github@proton.me" },
]
description = "Bioinformatics software package for identifying peptides and proteins in DIA and DISPA mass spectrometry data files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    'pyteomics>=4.4.1',
    'matplotlib>=3.3.4',
    'numba>=0.53.1',
    'numpy>=1.20.1',
    'pandas>=1.2.2',
    'Bio>=0.4.1',
    'PyQt5>=5.15.4',
    'lxml>=4.6.2',
    'scikit-learn>=1.1.2',
]


[project.urls]
"Homepage" = "https://github.com/xomicsdatascience/CsoDIAq"
"Bug Tracker" = "https://github.com/xomicsdatascience/CsoDIAq/issues"

[project.scripts]
csodiaq = "csodiaq.csodiaq:main"